force-app/main/default/objects/tc9_pr__Payee__c/tc9_pr__Payee__c.object-meta.xml
<CustomObject>
    <label>Payee</label>
    <nameField>
        <displayFormat>Payee-{0000000000}</displayFormat>
        <label>Payee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payee</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>