force-app/main/default/objects/tc9_pr__Payee__c/fields/Leave_Balance_Reinstated__c.field-meta.xml
<CustomField>
    <fullName>Leave_Balance_Reinstated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Automatically marked &apos;TRUE&apos; by flow(United States - Reinstatement of Leave Balance for Rehires
)when reinstatement criteria are met and leave balance is transferred from old PLR to new PLR</inlineHelpText>
    <label>Leave Balance Reinstated</label>
    <type>Checkbox</type>
</CustomField>