force-app/main/default/objects/tc9_pr__Payee__c/fields/tc9_ec__Available_Payment_Methods__c.field-meta.xml
<CustomField>
    <fullName>tc9_ec__Available_Payment_Methods__c</fullName>
    <description>Available Payment Methods as selected on the Payment Entity for this Payee</description>
    <formula>IF( INCLUDES(tc9_pr__Payment_Entity__r.tc9_pr__Available_Payment_Methods__c, &quot;Payee Australian Bank&quot;), &quot;Payee Australian Bank; &quot;,&quot;&quot;)
&amp;
IF( INCLUDES(tc9_pr__Payment_Entity__r.tc9_pr__Available_Payment_Methods__c, &quot;Payee International Bank&quot;), &quot;Payee International Bank; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(tc9_pr__Payment_Entity__r.tc9_pr__Available_Payment_Methods__c, &quot;Payee Cheque&quot;), &quot;Payee Cheque; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(tc9_pr__Payment_Entity__r.tc9_pr__Available_Payment_Methods__c, &quot;Payee Cash&quot;), &quot;Payee Cash; &quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Available Payment Methods as selected on the Payment Entity for this Payee</inlineHelpText>
    <label>Available Payment Methods</label>
    <type>Text</type>
</CustomField>