force-app/main/default/objects/tc9_pr__Payee__c/fields/tc9_edc__Is_Test_Record__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Is_Test_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to identify the test records created for volume testing during bulk data creation.</description>
    <inlineHelpText>This field is used to identify the test records created for volume testing during bulk data creation.</inlineHelpText>
    <label>Is Test Record</label>
    <type>Checkbox</type>
</CustomField>