force-app/main/default/objects/tc9_pr__Payee__c/fields/tc9_ext_recon__Payroll_Reconciliation_Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Payroll_Reconciliation_Status__c</fullName>
    <description>The reconciliation status of related payroll payee aggregate records.</description>
    <inlineHelpText>The reconciliation status of related payroll payee aggregate records.</inlineHelpText>
    <label>Payroll Reconciliation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Reconciled</fullName>
            </value>
            <value>
                <fullName>Reconciled Successfully</fullName>
            </value>
            <value>
                <fullName>Reconciliation Failed</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>