force-app/main/default/objects/tc9_pr__Payee__c/fields/tc9_pr__Cessation_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Cessation_Date__c</fullName>
    <description>Final date of payment for the payee</description>
    <inlineHelpText>Final date of payment for the payee</inlineHelpText>
    <label>Cessation Date</label>
    <type>Date</type>
</CustomField>