force-app/main/default/objects/tc9_pr__Payee__c/fields/tc9_pr__Community_User_Created__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Community_User_Created__c</fullName>
    <description>Date and time of user creation</description>
    <inlineHelpText>Date and time of user creation</inlineHelpText>
    <label>Community User Created</label>
    <type>DateTime</type>
</CustomField>