force-app/main/default/objects/tc9_pr__Payee__c/fields/tc9_pr__Create_Community_User__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Create_Community_User__c</fullName>
    <description>Defines if the community user should be created via a scheduled job</description>
    <inlineHelpText>Defines if the community user should be created via a scheduled job</inlineHelpText>
    <label>Create Community User</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>