force-app/main/default/objects/tc9_pr__Payee__c/fields/tc9_pr__Earner_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Earner_Type__c</fullName>
    <description>Indicates in Communities how this payee should populate their details.</description>
    <inlineHelpText>Indicates in Communities how this payee should populate their details.</inlineHelpText>
    <label>Earner Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PAYG</fullName>
            </value>
            <value>
                <fullName>PTY / LTD</fullName>
            </value>
            <value>
                <fullName>Self employed</fullName>
            </value>
            <value>
                <fullName>Managed Company Contractor</fullName>
            </value>
            <value>
                <fullName>PAYE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>