force-app/main/default/objects/tc9_pr__Payee__c/fields/tc9_pr__Employee__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Related Employee</description>
    <inlineHelpText>Related Employee</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payee</relationshipLabel>
    <relationshipName>Payee</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>