force-app/main/default/objects/tc9_pr__Payee__c/fields/tc9_pr__Exclude_From_User_Auto_Create__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Exclude_From_User_Auto_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the Payee should be excluded from having a User automatically created</description>
    <inlineHelpText>Identifies if the Payee should be excluded from having a User automatically created</inlineHelpText>
    <label>Exclude From User Auto Create</label>
    <type>Checkbox</type>
</CustomField>