force-app/main/default/objects/tc9_pr__Payee__c/fields/tc9_pr__First_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__First_Name__c</fullName>
    <description>The First Name of the related Employee.</description>
    <formula>tc9_pr__Employee__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The First Name of the related Employee.</inlineHelpText>
    <label>First Name</label>
    <type>Text</type>
</CustomField>