force-app/main/default/objects/tc9_pr__Payee__c/fields/tc9_pr__Last_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Last_Name__c</fullName>
    <description>The Last Name of the related Employee.</description>
    <formula>tc9_pr__Employee__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Last Name of the related Employee.</inlineHelpText>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>