force-app/main/default/objects/tc9_pr__Payee__c/fields/tc9_pr__Leave_Template__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Leave_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the related Leave Template used to create default Payee Leave Rules</description>
    <inlineHelpText>A lookup to the related Leave Template used to create default Payee Leave Rules</inlineHelpText>
    <label>Leave Template</label>
    <referenceTo>tc9_pr__Leave_Template__c</referenceTo>
    <relationshipLabel>Payee</relationshipLabel>
    <relationshipName>Payee</relationshipName>
    <type>Lookup</type>
</CustomField>