force-app/main/default/objects/tc9_pr__Payee__c/fields/tc9_pr__Original_Leave_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Original_Leave_Service_Date__c</fullName>
    <description>The original service date from which payee leave rules should accrue. Determines length of service for the purpose of accruing and displaying balances. This date can be overridden on individual Payee Leave Rules during/after their creation.</description>
    <inlineHelpText>The original service date from which payee leave rules should accrue. Determines length of service for the purpose of accruing and displaying balances. This date can be overridden on individual Payee Leave Rules during/after their creation.</inlineHelpText>
    <label>Original Leave Service Date</label>
    <type>Date</type>
</CustomField>