force-app/main/default/objects/tc9_pr__Payee__c/fields/tc9_pr__Pay_Advice_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Advice_Delivery_Method__c</fullName>
    <description>The default distribution method for pay advices</description>
    <inlineHelpText>The default distribution method for pay advices</inlineHelpText>
    <label>Pay Advice Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email as PDF</fullName>
            </value>
            <value>
                <fullName>Email as URL</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>