force-app/main/default/objects/tc9_pr__Payee__c/fields/tc9_pr__Pay_Advice_Message__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Advice_Message__c</fullName>
    <description>Enter a Payee-specific message which will appear on their pay advices.</description>
    <inlineHelpText>Enter a Payee-specific message which will appear on their pay advices.</inlineHelpText>
    <label>Pay Advice Message</label>
    <type>TextArea</type>
</CustomField>