force-app/main/default/objects/tc9_pr__Payee__c/fields/tc9_pr__Pay_Advice_Template__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Advice_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A Payee-specific pay advice template record to be used during the generation of pay advices.</description>
    <inlineHelpText>A Payee-specific pay advice template record to be used during the generation of pay advices.</inlineHelpText>
    <label>Pay Advice Template</label>
    <referenceTo>tc9_pr__Pay_Advice_Template__c</referenceTo>
    <relationshipLabel>Payee</relationshipLabel>
    <relationshipName>Payee</relationshipName>
    <type>Lookup</type>
</CustomField>