force-app/main/default/objects/tc9_pr__Payee__c/fields/tc9_pr__Payee_Cessation_Reason__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payee_Cessation_Reason__c</fullName>
    <description>The reason employment ended</description>
    <inlineHelpText>The reason employment ended</inlineHelpText>
    <label>Payee Cessation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved Early Retirement</fullName>
            </value>
            <value>
                <fullName>Casual Termination</fullName>
            </value>
            <value>
                <fullName>Death</fullName>
            </value>
            <value>
                <fullName>Dismissal</fullName>
            </value>
            <value>
                <fullName>End of Contract</fullName>
            </value>
            <value>
                <fullName>Invalidity</fullName>
            </value>
            <value>
                <fullName>Non-Genuine Redundancy</fullName>
            </value>
            <value>
                <fullName>Redundancy</fullName>
            </value>
            <value>
                <fullName>Resigned</fullName>
            </value>
            <value>
                <fullName>Retirement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>