force-app/main/default/objects/tc9_pr__Payee__c/fields/tc9_pr__Payee_Incomplete_Reasons__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payee_Incomplete_Reasons__c</fullName>
    <description>Issues to be resolved before the Payee can be included in a 2cloudnine Pay Batch</description>
    <formula>If ( ISBLANK ( tc9_pr__Employee__c ) , &quot;No Contact&quot; &amp;BR() , &quot;&quot; ) &amp;
If ( ISBLANK ( tc9_pr__Payment_Entity__c ) , &quot;No Payment Entity&quot; &amp; BR() , &quot;&quot; ) &amp;
If ( ISBLANK ( tc9_pr__Schedule__c ) , &quot;No Schedule&quot; &amp;BR() , &quot;&quot; ) &amp;
If ( ISBLANK ( TEXT(tc9_pr__Payment_Consolidation__c) ) , &quot;Payment Consolidation is blank&quot; &amp; BR() , &quot;&quot; ) &amp;
If ( NOT ISBLANK(tc9_pr__Payment_Details_Incomplete_reason__c), tc9_pr__Payment_Details_Incomplete_reason__c &amp;BR(),&quot;&quot;) &amp;
If ( ISBLANK ( tc9_pr__Payroll_Start_Date__c ) , &quot;No Payroll Start Date&quot; &amp;BR() , &quot;&quot; )</formula>
    <inlineHelpText>Issues to be resolved before the Payee can be included in a 2cloudnine Pay Batch</inlineHelpText>
    <label>Payee Incomplete Reasons</label>
    <type>Text</type>
</CustomField>