force-app/main/default/objects/tc9_pr__Payee__c/fields/tc9_pr__Payment_Consolidation__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payment_Consolidation__c</fullName>
    <description>Indicates whether payments for multiple periods in the same pay batch should be consolidated or treated as individual payments during payment file creation.</description>
    <inlineHelpText>Indicates whether payments for multiple periods in the same pay batch should be consolidated or treated as individual payments during payment file creation.</inlineHelpText>
    <label>Payment Consolidation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Separated</fullName>
                <default>true</default>
                <label>Separated</label>
            </value>
            <value>
                <fullName>Consolidated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>