force-app/main/default/objects/tc9_pr__Payee__c/fields/tc9_pr__Payment_Details_Complete__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payment_Details_Complete__c</fullName>
    <description>Indicates if a Payee has sufficient Payment Details records to provide 100% distribution of funds.</description>
    <inlineHelpText>Indicates if a Payee has sufficient Payment Details records to provide 100% distribution of funds.</inlineHelpText>
    <label>Payment Details Complete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>