force-app/main/default/objects/tc9_pr__Payee__c/fields/tc9_pr__Payment_Details_Incomplete_reason__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payment_Details_Incomplete_reason__c</fullName>
    <description>If Payment Details Complete = No then the reason for the Payment Details been incomplete is provided here.</description>
    <inlineHelpText>If Payment Details Complete = No then the reason for the Payment Details been incomplete is provided here.</inlineHelpText>
    <label>Payment Details Incomplete reason</label>
    <type>TextArea</type>
</CustomField>