force-app/main/default/objects/tc9_pr__Payee__c/fields/tc9_pr__Payment_Entity__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payment_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Legal entity making payment to this payee</description>
    <inlineHelpText>Legal entity making payment to this payee</inlineHelpText>
    <label>Payment Entity</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The account selected on the Payment Entity field on the Payee object must have a record type of Payment Entity</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Payment_Entity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payee</relationshipLabel>
    <relationshipName>Payee</relationshipName>
    <type>Lookup</type>
</CustomField>