force-app/main/default/objects/tc9_pr__Payee__c/fields/tc9_pr__Payroll_Id__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payroll_Id__c</fullName>
    <description>External Payroll System Id</description>
    <inlineHelpText>External Payroll System Id</inlineHelpText>
    <label>Payroll Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>