force-app/main/default/objects/tc9_pr__Payee__c/fields/tc9_pr__Payroll_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payroll_Start_Date__c</fullName>
    <description>Date from which payments can be made to this payee</description>
    <inlineHelpText>Date from which payments can be made to this payee</inlineHelpText>
    <label>Payroll Start Date</label>
    <type>Date</type>
</CustomField>