force-app/main/default/objects/tc9_pr__Payee__c/fields/tc9_pr__Payroll_System__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payroll_System__c</fullName>
    <description>Application used to calculate payruns for this payee</description>
    <inlineHelpText>Application used to calculate payruns for this payee</inlineHelpText>
    <label>Payroll System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2cloudnine Payroll AUS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>