force-app/main/default/objects/tc9_pr__Payee__c/fields/tc9_pr__Previous_Payroll_Id__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Previous_Payroll_Id__c</fullName>
    <description>STP2 - when changing the Payroll Id of a Payee with existing YTD values in the financial year, please enter their Previous Payroll Id in this field to avoid duplication of YTDs in myGov.</description>
    <inlineHelpText>STP2 - when changing the Payroll Id of a Payee with existing YTD values in the financial year, please enter their Previous Payroll Id in this field to avoid duplication of YTDs in myGov.</inlineHelpText>
    <label>Previous Payroll Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>