force-app/main/default/objects/tc9_pr__Payee__c/fields/tc9_pr__Primary_Location__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Primary_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Location</label>
    <referenceTo>tc9_pr__Location__c</referenceTo>
    <relationshipLabel>Payee</relationshipLabel>
    <relationshipName>Payee</relationshipName>
    <type>Lookup</type>
</CustomField>