force-app/main/default/objects/tc9_pr__Payee__c/fields/tc9_pr__Primary_Record__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Primary_Record__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates the primary record the payee view in the self service community.</description>
    <inlineHelpText>Indicates the primary record the payee view in the self service community.</inlineHelpText>
    <label>Primary Record</label>
    <type>Checkbox</type>
</CustomField>