force-app/main/default/objects/tc9_pr__Payee__c/fields/tc9_pr__Tax_File_Number__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Tax_File_Number__c</fullName>
    <description>Deprecated.</description>
    <inlineHelpText>Deprecated.</inlineHelpText>
    <label>Tax File Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>