force-app/main/default/objects/tc9_pr__Payee__c/fields/tc9_pr__UK_NI_Number__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_NI_Number__c</fullName>
    <description>The Payee National Insurance Number</description>
    <inlineHelpText>The Payee National Insurance Number</inlineHelpText>
    <label>UK NI Number</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>