force-app/main/default/objects/tc9_pr__Payee__c/fields/Termination_Pay_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Pay_Date__c</fullName>
    <label>Termination Pay Date</label>
    <type>DateTime</type>
</CustomField>