force-app/main/default/objects/tc9_pr__Payee__c/listViews/tc9_eau__STP2_Payroll_Start_Date_Check.listView-meta.xml
<ListView>
    <fullName>tc9_eau__STP2_Payroll_Start_Date_Check</fullName>
    <booleanFilter>1 OR 2 OR (3 AND 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>tc9_pr__Employee__c</columns>
    <columns>tc9_pr__Payroll_Start_Date__c</columns>
    <columns>tc9_pr__Payee_Cessation_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>tc9_pr__Payroll_Start_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>tc9_pr__Payroll_Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>10/1/2023</value>
    </filters>
    <filters>
        <field>tc9_pr__Payroll_Start_Date__c</field>
        <operation>lessThan</operation>
        <value>1/1/1950</value>
    </filters>
    <filters>
        <field>tc9_pr__Payroll_Start_Date__c</field>
        <operation>equals</operation>
        <value>1/1/1800</value>
    </filters>
    <label>STP2 Payroll Start Date Check</label>
</ListView>