force-app/main/default/objects/tc9_pr__Payee__c/listViews/tc9_pr__All.listView-meta.xml
<ListView>
    <fullName>tc9_pr__All</fullName>
    <columns>NAME</columns>
    <columns>tc9_pr__Employee__c</columns>
    <columns>tc9_pr__First_Name__c</columns>
    <columns>tc9_pr__Last_Name__c</columns>
    <columns>tc9_pr__Payment_Entity__c</columns>
    <columns>tc9_pr__Schedule__c</columns>
    <columns>tc9_pr__Payroll_Start_Date__c</columns>
    <columns>tc9_pr__Payroll_System__c</columns>
    <columns>tc9_pr__Leave_Template__c</columns>
    <columns>tc9_pr__Pay_Advice_Delivery_Method__c</columns>
    <columns>tc9_pr__Payment_Details_Incomplete_reason__c</columns>
    <columns>tc9_pr__Payee_Incomplete_Reasons__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>